[gd_scene load_steps=3 format=3 uid="uid://bjve674gwc21n"]

[ext_resource type="Script" uid="uid://dle1hpwvm5mw1" path="res://event_rooms/chapter_01/gamble_event.gd" id="1_y4k3n"]
[ext_resource type="PackedScene" uid="uid://dnn5kg0tp0d22" path="res://scenes/event_rooms/event_room_button.tscn" id="2_6qw3n"]

[node name="GambleEvent" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_y4k3n")

[node name="ColorRect" type="ColorRect" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0, 0.247218, 0.511811, 1)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="CenterContainer" type="CenterContainer" parent="HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="EventMenu" type="VBoxContainer" parent="HBoxContainer/CenterContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/separation = 5

[node name="Label" type="Label" parent="HBoxContainer/CenterContainer/EventMenu"]
layout_mode = 2
text = "\"Feeling lucky?
Bet your money!\""
horizontal_alignment = 1
vertical_alignment = 1

[node name="FiftyButton" parent="HBoxContainer/CenterContainer/EventMenu" instance=ExtResource("2_6qw3n")]
unique_name_in_owner = true
custom_minimum_size = Vector2(90, 0)
layout_mode = 2
text = "Bet 50c: 50% chance
to win 100c"

[node name="ThirtyButton" parent="HBoxContainer/CenterContainer/EventMenu" instance=ExtResource("2_6qw3n")]
unique_name_in_owner = true
layout_mode = 2
text = "Bet 50c: 30% chance
to win 200c"

[node name="SkipButton" parent="HBoxContainer/CenterContainer/EventMenu" instance=ExtResource("2_6qw3n")]
unique_name_in_owner = true
layout_mode = 2
text = "Skip the bet"

[node name="EventAfterMath" type="VBoxContainer" parent="HBoxContainer/CenterContainer"]
unique_name_in_owner = true
visible = false
custom_minimum_size = Vector2(110, 0)
layout_mode = 2

[node name="AftermathText" type="RichTextLabel" parent="HBoxContainer/CenterContainer/EventAfterMath"]
unique_name_in_owner = true
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
bbcode_enabled = true
text = "[center]\"Playing safe? Never thought you were the type.\"[/center]
"
scroll_active = false

[node name="ContinueButton" parent="HBoxContainer/CenterContainer/EventAfterMath" instance=ExtResource("2_6qw3n")]
layout_mode = 2
text = "Continue"
